- Adds max-height utility class, with 100% and stretch as default values - updates fixtures

--- a/test/scss/test-import-all.scss
+++ b/test/scss/test-import-all.scss
@@ -192,6 +192,9 @@ $bitstyles-justify-values: (
   'start': start,
 );
 $bitstyles-margin-breakpoints: ('xl', 's');
+$bitstyles-max-height-values: (
+  '1em': 1em,
+);
 $bitstyles-min-height-values: (
   '1em': 1em,
 );
