--- a/test/scss/test-use-all.scss
+++ b/test/scss/test-use-all.scss
@@ -139,6 +139,9 @@
   $items-values: ('start': start),
   $justify-values: ('start': start),
   $margin-breakpoints: ('xl', 's'),
+  $max-height-values: (
+    '1em': 1em,
+  ),
   $min-height-values: ('1em': 1em),
   $min-width-values: ('1em': 1em),
   $overflow-values: (
